--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,9 @@ on:
   release:
     types: [published]
 
+permissions:
+  contents: write   # <-- giver GITHUB_TOKEN write-adgang
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,11 +14,15 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Build plugin zip (correct WordPress structure)
+      # Pak KUN plugin-mappen (ikke .github/ eller README)
+      - name: Build plugin zip (correct WP structure)
         run: |
-          zip -r nordpaa-prisberegner-v3.${GITHUB_REF_NAME}.zip nordpaa-prisberegner-v3
+          cd nordpaa-prisberegner-v3
+          zip -r ../nordpaa-prisberegner-v3.${GITHUB_REF_NAME}.zip .
 
       - name: Upload release asset
         uses: softprops/action-gh-release@v2
         with:
           files: nordpaa-prisberegner-v3.${{ github.ref_name }}.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
